uv + chainlit fix

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,76 @@
 .cc/
-.venv/
-uv.lock
+# -----------------------------------------------------------------------------
+# Python bytecode and caches
+# -----------------------------------------------------------------------------
 __pycache__/
+*.py[cod]
+*$py.class
+
+# -----------------------------------------------------------------------------
+# Virtual Environments
+# -----------------------------------------------------------------------------
+.venv/
+venv/
+env/
+.env
+*.env
+.env.*
+
+# -----------------------------------------------------------------------------
+# Dependency Management (uv & pip)
+# -----------------------------------------------------------------------------
+uv.lock
+pip-wheel-metadata/
+.pip-cache/
+
+# -----------------------------------------------------------------------------
+# Chainlit
+# -----------------------------------------------------------------------------
+.chainlit/
+.files/
+# -----------------------------------------------------------------------------
+# Caches from ML/NLP Libraries (like HuggingFace, sentence-transformers)
+# -----------------------------------------------------------------------------
+.cache/
+.hf-cache/
+
+# -----------------------------------------------------------------------------
+# Build and Distribution Artifacts
+# -----------------------------------------------------------------------------
+build/
+dist/
+*.egg-info/
+*.egg
+
+# -----------------------------------------------------------------------------
+# IDE and Editor specific files
+# -----------------------------------------------------------------------------
+# VSCode
+.vscode/
+
+# PyCharm
+.idea/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# -----------------------------------------------------------------------------
+# Operating System files
+# -----------------------------------------------------------------------------
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+
+# -----------------------------------------------------------------------------
+# Testing and Coverage
+# -----------------------------------------------------------------------------
+.pytest_cache/
+.coverage
+htmlcov/
